feat:structure modified

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="wrapper">
-        <section class="upgrade">
+        <section class="upgrade h-80">
             <a href="#" class="upgrade-btn">Upgrade</a>
         </section>
         <section class="side-bar">
@@ -176,10 +176,11 @@
             Suscipit magni tempore natus esse eius quisquam nisi explicabo quasi eum nihil unde quaerat voluptatem animi
             nemo voluptates maiores, ab at atque facilis enim harum, sit velit. Voluptates, ullam perspiciatis!
         </section>
-        <section class="song-info">
-            <!-- debug -->
-            <h2>Lyrics</h2>
-        </section>
+        
+    </section>
+    <section class="song-info h-80">
+        <!-- debug -->
+        <h2>Lyrics</h2>
     </section>
 </body>
 
