feat: elements added to navbar and upgrade section

--- a/index.html
+++ b/index.html
@@ -7,181 +7,58 @@
     <title>Spotify App-web</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <section class="wrapper">
+        <!-- Upgrade section -->
         <section class="upgrade h-80">
-            <a href="#" class="upgrade-btn">Upgrade</a>
+            <a href="#" class="upgrade-btn">EFFETTUA L'UPGRADE</a>
         </section>
+        <!-- /Upgrade section -->
+
+        <!-- Side bar section -->
         <section class="side-bar">
             <nav>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, provident at saepe reiciendis eum
-                veniam voluptatibus? Ipsam quidem quos, eligendi nam totam debitis, saepe animi consectetur
-                necessitatibus aperiam laborum omnis.
-                Ut ea totam voluptatem doloribus sit quasi quod atque sapiente fugit architecto ullam quis, quae
-                accusantium numquam velit. Odio, magnam error aspernatur mollitia ex doloribus labore dolores ipsum
-                corrupti culpa.
-                Quasi fugiat facilis officiis eum porro! Quidem accusantium, animi expedita nemo eligendi ex unde ipsa
-                commodi quia, officiis repellendus veniam accusamus adipisci esse reprehenderit molestiae iure eum
-                quaerat iusto aut.
-                Quidem similique facilis sequi soluta quas aliquam laboriosam quaerat ipsum tenetur, pariatur quos
-                incidunt hic cumque repellendus ex dolores suscipit laborum perferendis iste fugit voluptatem cum at.
-                Soluta, quaerat autem.
-
-                Quisquam totam, natus error placeat distinctio doloribus minus, blanditiis neque pariatur non delectus
-                velit, officiis ipsa vel unde nobis! Quis quasi dicta amet dolores, ea explicabo placeat reiciendis
-                distinctio soluta!
+                <img src="./img/logo.svg" alt="Logo spotify" class="logo-spotify margin-left">
+                <section class="menu">
+                    <ul class="margin-left">
+                        <li><i class="fa-solid fa-house"></i> Home</li>
+                        <li><i class="fa-solid fa-magnifying-glass"></i> Cerca</li>
+                        <li><i class="fa-solid fa-lines-leaning"></i>La tua libreria</li>
+                    </ul>
+                </section>
+                <section class="create-playlist">
+                    <h3 class="margin-y margin-left">Playlist</h3>
+                    <ul>
+                        <li class="flex"><span class="square margin-left">&plus;</span><h5 class="margin-left create-playlist-title">Crea Playlist</h5></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </section>
             </nav>
         </section>
+        <!-- /Side bar section -->
+
+        <!-- Main section -->
         <section class="main">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem impedit eaque voluptate eligendi deleniti.
-            Aliquid fuga consequuntur nobis laborum aspernatur reprehenderit a voluptatem repellat omnis, accusamus
-            ipsum expedita vero! Dolorum.
-            Obcaecati maiores eos voluptatem unde vel alias. Tempore beatae recusandae dolores dolorum commodi at eos,
-            unde, earum, ut consequatur voluptatum et neque autem iure odit vel deserunt asperiores minima quam.
-            Corrupti, asperiores dolores. Aliquam nulla ducimus repudiandae, laboriosam doloribus eligendi facere
-            necessitatibus natus nostrum molestiae facilis exercitationem unde itaque eaque aliquid? Facere vitae sed
-            dolores, exercitationem hic quas! Quasi, minima.
-            Dolor ipsam tempore, placeat ex consectetur asperiores totam quisquam. Iusto officiis blanditiis qui
-            officia, laudantium, culpa quasi modi in ab ratione odit sint adipisci aperiam, nemo reiciendis eius!
-            Doloremque, vero.
-            Labore amet explicabo, laboriosam laborum, necessitatibus dignissimos, cumque qui dolorem voluptatum ducimus
-            culpa quam adipisci! A ad ducimus vero repellendus? Officiis ab deleniti odit quasi adipisci modi ullam
-            facilis temporibus.
-            Odio dolorum asperiores voluptates consectetur corrupti fugit! Eius pariatur voluptate tempore repellendus
-            quae aliquid nostrum porro soluta architecto. Eveniet aspernatur est totam veniam doloremque ad itaque quas
-            possimus dolores saepe!
-            Facere ducimus error aspernatur ipsum voluptas, rerum quibusdam fugit accusamus quas fuga culpa assumenda
-            maiores delectus voluptatem, ipsam quia magni laborum! Qui autem nostrum saepe aut, ducimus corporis magni
-            tempore.
-            Veniam, sint dolore commodi, alias magni vero iure impedit accusamus ab enim repudiandae unde animi mollitia
-            recusandae voluptatem, iste laborum. Eligendi natus harum explicabo ea officia dolorem maxime? Cupiditate,
-            perferendis.
-            Obcaecati placeat adipisci impedit sequi officia repudiandae molestias reiciendis id at accusantium vitae
-            veritatis expedita illo, numquam ut quidem? Totam quam recusandae illo voluptates hic repellat culpa est
-            laudantium provident.
-            Aspernatur, quo dignissimos. Tempora labore pariatur voluptates voluptatibus ipsa, eius ducimus quibusdam
-            provident soluta sequi nobis inventore aperiam dolorum libero dolorem deleniti esse a nulla, cumque amet
-            totam! Fugiat, cumque.
-            Excepturi expedita obcaecati doloribus incidunt earum quae voluptatum perspiciatis suscipit qui? Sequi ipsam
-            iste a officiis ratione inventore itaque adipisci voluptate eos minima praesentium rerum est, libero et
-            quaerat quo?
-            Eligendi quis ab a nostrum eum alias voluptate quibusdam nulla sit, inventore nam id aperiam facere
-            repudiandae enim, quod accusantium totam magnam, reprehenderit asperiores ducimus fuga. Tempora, quidem
-            dolore! Tempora?
-            Quis numquam non enim debitis sed pariatur blanditiis reprehenderit eligendi at assumenda, molestias unde
-            maxime a modi adipisci hic voluptatum! Perferendis velit, fugiat veniam natus illum iure fugit quidem nobis.
-            Debitis, consectetur libero. Est nobis sunt molestiae laudantium nisi id ullam commodi. Dolore ipsum
-            voluptates dicta libero tenetur eum, ab, nesciunt aperiam magni delectus quod nisi repellat sunt dolor
-            pariatur!
-            Voluptate facere deserunt similique sapiente soluta ex harum, inventore illum non rem optio impedit
-            temporibus veritatis consequuntur incidunt eligendi illo eos? Non voluptatem distinctio necessitatibus
-            accusantium dolorem, provident repellat! Fuga?
-            Sed animi asperiores, commodi eum nam beatae vitae? Quas ipsam vel necessitatibus. Sint doloribus iure eum.
-            Suscipit iste omnis doloribus quo earum deleniti laboriosam. Error alias molestias dolorum maxime facere.
-            Animi cum voluptatibus dolorem exercitationem dolores similique laborum fugit quod, obcaecati voluptatum at
-            vitae maiores voluptatem porro sunt nam corrupti saepe itaque dolore enim? Beatae ea possimus eveniet autem
-            placeat.
-            Rerum quos accusamus ipsum molestiae, provident eum libero suscipit velit quaerat tempora! Illo officia
-            tenetur et quam maxime porro delectus doloribus repudiandae reprehenderit, libero perspiciatis placeat illum
-            sint rerum aperiam?
-            Est nobis voluptatum numquam. Vero, molestias distinctio iure ipsum placeat mollitia ea beatae eius itaque
-            minima doloribus consectetur necessitatibus reprehenderit consequatur, rerum deleniti maiores accusamus
-            tempore omnis, dolor dicta quibusdam!
-            Laboriosam, facere neque recusandae rem est repellat magnam in sit aliquam nesciunt odio corporis sequi
-            dolorum culpa quasi. Blanditiis, facilis quos. Officia maiores iste adipisci amet reiciendis minima. Ullam,
-            officiis?
-            Esse, est ullam amet, modi animi porro illum eos tenetur iste ab doloremque sed aut pariatur consectetur, ut
-            provident commodi quos mollitia. Non nostrum optio dicta reprehenderit, dolorem dolores officiis?
-            Rem reprehenderit hic velit explicabo placeat, doloremque voluptas magni laboriosam quod, aliquid accusamus
-            necessitatibus dolorum ratione praesentium delectus, suscipit soluta laborum aperiam tempore illo atque
-            magnam voluptates. Blanditiis, mollitia numquam.
-            Molestiae cumque perspiciatis maxime nulla repellat! Voluptate veniam ducimus reprehenderit facere deserunt
-            recusandae eligendi quidem magni suscipit ipsam praesentium odio officia, nisi magnam cumque non delectus
-            ratione. Architecto, repellendus voluptatum!
-            Maxime culpa incidunt sequi optio quis commodi maiores iste magni aut, ad quo ipsam soluta placeat nisi
-            mollitia modi corrupti aperiam molestiae iusto quaerat numquam inventore nihil? Doloremque, exercitationem
-            quam.
-            Reiciendis placeat numquam quidem quo tempore cupiditate consequuntur nihil maxime suscipit nobis temporibus
-            odit eius, tempora impedit voluptatum voluptatibus, earum, quaerat laboriosam. Magnam, deleniti expedita
-            eligendi animi architecto nisi modi!
-            Totam, labore! Aspernatur nobis beatae blanditiis aut vitae maiores recusandae quaerat illum, commodi enim,
-            voluptatibus eum doloremque id nostrum accusamus voluptas repellendus deleniti qui ad maxime quas sed ullam.
-            Repellendus!
-            Voluptas, in! Vero et praesentium ab. Quod asperiores molestiae minima laborum voluptate blanditiis earum
-            voluptates corrupti eum sint quidem consectetur ullam molestias incidunt repellat optio, deleniti minus
-            officia qui non?
-            Eveniet ipsum dolorem quo accusantium cumque dolores, vel veniam unde voluptatum quidem consectetur quaerat
-            aperiam eum dolore iste architecto rerum eius, iure, ratione nulla quas. Aspernatur vitae necessitatibus
-            natus assumenda.
-            Adipisci sed accusantium laborum distinctio maiores soluta beatae ipsum repellat aperiam nobis illum minus
-            laudantium at natus itaque earum deserunt, esse fugiat quos, ad ipsam fuga. Soluta beatae porro minus!
-            Ipsam ab consectetur modi laborum optio officia culpa, ex fugiat. Provident, suscipit odio soluta atque
-            praesentium fugit error assumenda, quo ullam officia repudiandae voluptates labore impedit alias corporis
-            ipsum eveniet?
-            Repellat voluptate amet, a iste deserunt cum incidunt illum cumque impedit adipisci quasi dicta ullam
-            accusantium reprehenderit distinctio perspiciatis voluptatibus, qui culpa inventore recusandae alias at
-            sapiente neque doloremque! Dolorem!
-            Architecto rem est praesentium aliquid cumque dolores, beatae temporibus labore quas exercitationem neque
-            minus fugit, placeat aspernatur dolor doloribus reiciendis quidem vero consequuntur, qui hic! Excepturi rem
-            eos quasi necessitatibus.
-            Earum perferendis voluptate nihil exercitationem, incidunt doloremque voluptatum adipisci tenetur dolorum
-            sapiente! Rerum nobis aliquam non sunt alias ea officia fugit, velit, adipisci, vero laborum odio.
-            Temporibus, hic! Exercitationem, vel.
-            Quaerat adipisci totam voluptates porro corporis eum beatae recusandae fugiat enim quo ex, similique sit
-            rerum repudiandae officia, facilis obcaecati harum ullam minima ratione libero tempora. Ipsum praesentium ex
-            ratione?
-            Odio maiores libero, aspernatur error assumenda earum cupiditate. Delectus voluptatum repellendus ducimus!
-            Numquam blanditiis similique adipisci quos. At modi delectus quidem repudiandae quibusdam, cumque magni,
-            voluptatem, deserunt quod earum eveniet?
-            Officiis iste rerum recusandae distinctio illum consequuntur amet, labore ad numquam voluptatem, doloribus
-            officia adipisci aperiam optio saepe? Excepturi praesentium facere magnam doloribus quisquam eum minus non
-            aperiam accusantium consequatur.
-            Consequatur distinctio quos nam voluptas dolorem repellendus iusto nemo perspiciatis aliquid blanditiis?
-            Pariatur, autem in cumque laudantium quasi accusantium dolorem maiores ad natus, qui totam nemo rerum
-            deleniti dolores fugiat.
-            Distinctio porro nobis, iusto placeat rerum neque recusandae sunt quo. Mollitia natus ut officiis doloribus
-            assumenda nesciunt nemo hic vitae quidem aliquam! Atque quia cumque quibusdam facere ullam ad doloribus.
-            Eaque modi similique ex, quae non, ratione, voluptatem magnam labore eos pariatur ad dolore porro quo
-            veritatis atque earum quisquam ab. In laborum nihil eligendi quidem eius perferendis magnam reprehenderit!
-            Dolore quas magni perspiciatis ipsa molestiae et rerum vel voluptatum veniam vero, dolor hic minus libero
-            laborum? Nostrum atque repudiandae ut natus quam, vel placeat, recusandae mollitia facilis nihil reiciendis.
-            Repudiandae deleniti sapiente quae, nisi modi at iusto! Consequatur delectus voluptas cumque doloremque aut,
-            fugiat tempore doloribus atque voluptatibus a sapiente ex officia sunt explicabo similique, ipsum, eius
-            quae! Similique.
-            Velit qui perferendis rerum eius repudiandae incidunt voluptates aliquid ipsam error sunt veritatis in
-            libero vitae commodi impedit vel voluptatem sequi perspiciatis, quis saepe architecto esse excepturi cum!
-            Consequatur, earum.
-            Repellendus pariatur odio vero minus distinctio tempora magnam, aut voluptate deserunt sed perferendis
-            dolores exercitationem optio fugiat nobis possimus blanditiis est explicabo soluta harum. Perspiciatis
-            accusantium provident quae mollitia vel.
-            Commodi ea nostrum accusantium, repellendus ullam nulla impedit odio ut tempore illum atque eum est quos
-            omnis quae consectetur amet ipsa sequi autem repudiandae blanditiis, nobis perspiciatis. Vel, modi totam!
-            Tenetur fugit assumenda impedit ullam, suscipit officiis expedita aperiam sed possimus quod obcaecati non
-            quos nostrum officia natus quasi nihil quaerat ab qui. Explicabo totam deleniti corporis quod, voluptatibus
-            cum.
-            Debitis laboriosam iste optio assumenda! In nesciunt sed ab odit perferendis dolorum fuga repudiandae
-            laboriosam consequatur est. Dolorum praesentium iste, deserunt quos ad explicabo, quis quae, eaque incidunt
-            mollitia sunt?
-            Quos maxime incidunt minus doloremque molestias atque animi porro iusto, inventore magnam earum rerum
-            dolores adipisci error, suscipit tempore quidem sequi hic illum tempora. Voluptates a optio ab reiciendis
-            deleniti.
-            Optio repellendus cumque inventore asperiores magnam, reprehenderit a incidunt porro cupiditate aliquid
-            veniam voluptates? Veniam eveniet, iste excepturi exercitationem dolorum debitis ipsa possimus mollitia?
-            Iure repudiandae eligendi libero esse autem!
-            Aliquam inventore minus veritatis ea. Aliquam quisquam aliquid fuga omnis porro voluptatibus accusamus.
-            Magni repudiandae porro, repellat, eius inventore voluptates expedita iusto vero esse placeat, sunt neque
-            perspiciatis deleniti quos.
-            Suscipit magni tempore natus esse eius quisquam nisi explicabo quasi eum nihil unde quaerat voluptatem animi
-            nemo voluptates maiores, ab at atque facilis enim harum, sit velit. Voluptates, ullam perspiciatis!
+
         </section>
-        
+        <!-- /Main section -->
     </section>
+
+    <!-- Song-info section -->
     <section class="song-info h-80">
-        <!-- debug -->
-        <h2>Lyrics</h2>
     </section>
+    <!-- /Song-info section -->
 </body>
 
 </html>
