feat: recently played div modified

--- a/index.html
+++ b/index.html
@@ -92,35 +92,36 @@
             <span class="card-subtitle">Kyle Dixon & Michael Stein</span>
             </div>
     </div>
-    <div>
-        <img src="./img/aquietplace.jpeg" alt="">
+    <div class="col">
         <div class="card">
+        <img src="./img/aquietplace.jpeg" alt="">
             <h3 class="card-title">A quiet place</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
-    </div>
+            </div>
     <div class="col">
-        <img src="./img/split.jpeg" alt="">
         <div class="card">
+        <img src="./img/split.jpeg" alt="">
             <h3 class="card-title">Split</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
     </div>
     <div class="col">
-        <img src="./img/cure.jpeg" alt="">
         <div class="card">
+        <img src="./img/cure.jpeg" alt="">
             <h3 class="card-title">A cure for wellness</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
     </div>
     <div class="col">
-        <img src="./img/sinister.jpeg" alt="">
         <div class="card">
+        <img src="./img/sinister.jpeg" alt="">
             <h3 class="card-title">Sinister</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
     </div>
  </div>
+</div>
  </div>
         </section>
         <!-- /Main section -->
