feat: created for you section  modified

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <section class="wrapper">
+        <div class="top">
         <!-- Upgrade section -->
         <section class="upgrade h-90">
             <a href="#" class="upgrade-btn">EFFETTUA L'UPGRADE</a>
@@ -39,21 +40,16 @@
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
                     </ul>
-                    <div class="nav-footer">
-                        <div class="install">
-                        <span class="downarrow">&DownArrow;</span>
-                        <span>Installa app</span>
-                    </div>
-                    <hr class="separator">
-                    <div class="nav-footer">
-                        <i class="fa-regular fa-user admin"></i>
-                        <span class="admin-name">Jhon Doe</span>
-                    </div>
-                    </div>
+                </section>
+                <section class="nav-footer">
+                    <div class="install">
+                    <span class="downarrow">&DownArrow;</span>
+                    <span>Installa app</span>
+                </div>
+                <hr class="separator">
+                    <i class="fa-regular fa-user admin"></i>
+                    <span class="admin-name">Jhon Doe</span>
                 </section>
             </nav>
         </section>
@@ -72,6 +68,7 @@
     <li>SCOPRI</li>
     </ul>
 </nav>
+<!-- Recently played -->
     <h2 class="playlist-title">Recently played</h2>
     <div class="recently-played">
 
@@ -121,10 +118,35 @@
             </div>
     </div>
  </div>
+ <!-- /Recently played -->
+
+  <!-- Created for you -->
+
+  <h2 class="for-you-title">Creato per Jhon Doe</h2>
+  <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti</p>
+  <div class="Created-for-you">
+
+  </div>
+   <!-- /Created for you -->
+    <div class="created-for-you">
+  <div class="col-2">
+        <div class="card">
+        <img src="./img/radar.jpeg" alt="">
+            <h3 class="card-title">Release Radar</h3><br>
+            </div>
+    </div>
+    <div class="col-2">
+        <div class="card">
+        <img src="./img/mixdaily.jpeg" alt="">
+            <h3 class="card-title">Daily Mix 1</h3><br>
+            </div>
+    </div>
+</div>
 </div>
  </div>
         </section>
         <!-- /Main section -->
+    </div>
     </section>
 
     <!-- Song-info section -->
