--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="top">
         <!-- Upgrade section -->
         <section class="upgrade h-90">
-            <a href="#" class="upgrade-btn">EFFETTUA L'UPGRADE</a>
+            <a href="#" class="upgrade-btn light">EFFETTUA L'UPGRADE</a>
         </section>
         <!-- /Upgrade section -->
 
@@ -27,29 +27,29 @@
                 <img src="./img/logo.svg" alt="Logo spotify" class="logo-spotify margin-left">
                 <section class="menu">
                     <ul class="margin-left">
-                        <li><i class="fa-solid fa-house"></i><a href="">Home</a> </li>
-                        <li><i class="fa-solid fa-magnifying-glass"></i> <a href="">Cerca</a></li>
-                        <li><i class="fa-solid fa-lines-leaning"></i><a href="">La tua libreria</a></li>
+                        <li class="light"><i class="fa-solid fa-house"></i><a href="">Home</a> </li>
+                        <li class="light"><i class="fa-solid fa-magnifying-glass"></i> <a href="">Cerca</a></li>
+                        <li class="light"><i class="fa-solid fa-lines-leaning"></i><a href="">La tua libreria</a></li>
                     </ul>
                 </section>
                 <section class="create-playlist margin-left">
                     <h3 class="margin-y">PLAYLIST</h3>
                     <ul class="line-height">
-                        <li class="flex"><button class="square margin-left">&plus;</button><h5 class="margin-left create-playlist-title">Crea Playlist</h5></li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
+                        <li class="flex"><button class="square margin-left">&plus;</button><h5 class="margin-left create-playlist-title light">Crea Playlist</h5></li>
+                        <li class="light">Nome Playlist</li>
+                        <li class="light">Nome Playlist</li>
+                        <li class="light">Nome Playlist</li>
+                        <li class="light">Nome Playlist</li>
                     </ul>
                 </section>
                 <section class="nav-footer">
                     <div class="install">
                     <span class="downarrow">&DownArrow;</span>
-                    <span>Installa app</span>
+                    <span class="light">Installa app</span>
                 </div>
                 <hr class="separator">
                     <i class="fa-regular fa-user admin"></i>
-                    <span class="admin-name">Jhon Doe</span>
+                    <span class="admin-name light">Jhon Doe</span>
                 </section>
             </nav>
         </section>
@@ -60,12 +60,12 @@
           <div class="main-content">
 <nav class="main-menu">
     <ul>
-    <li>IN EVIDENZA</li>
-    <li >PODCAST</li>
-    <li>CLASSIFICHE</li>
-    <li>GENERI E MOOD</li>
-    <li>NUOVE USCITE</li>
-    <li>SCOPRI</li>
+    <li class="light"><a href="">IN EVIDENZA</a></li>
+    <li class="light"><a href="">PODCAST</a></li>
+    <li class="light"><a href="">CLASSIFICHE</a></li>
+    <li class="light"><a href="">GENERI E MOOD</a></li>
+    <li class="light"><a href="">NUOVE USCITE</a></li>
+    <li class="light"><a href="">SCOPRI</a></li>
     </ul>
 </nav>
 <!-- Recently played -->
