feat:header opacity + nav adjusted

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li class="light">Nome Playlist</li>
                     </ul>
                 </section>
-                <section class="nav-footer">
+                <div class="nav-footer">
                     <div class="install">
                     <span class="downarrow">&DownArrow;</span>
                     <span class="light">Installa app</span>
@@ -50,7 +50,7 @@
                 <hr class="separator">
                     <i class="fa-regular fa-user admin"></i>
                     <span class="admin-name light">Jhon Doe</span>
-                </section>
+                </div>
             </nav>
         </section>
         <!-- /Side bar section -->
@@ -60,7 +60,7 @@
           <div class="main-content">
 <nav class="main-menu">
     <ul>
-    <li class="light"><a href="">IN EVIDENZA</a></li>
+    <li class="light border-bottom"><a href="">IN EVIDENZA</a></li>
     <li class="light"><a href="">PODCAST</a></li>
     <li class="light"><a href="">CLASSIFICHE</a></li>
     <li class="light"><a href="">GENERI E MOOD</a></li>
@@ -151,6 +151,9 @@
 
     <!-- Song-info section -->
     <section class="song-info h-90">
+        <div class="left"></div>
+        <div class="center"></div>
+        <div class="right"></div>
     </section>
     <!-- /Song-info section -->
 </body>
