--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify App-web</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+   
 </head>
 
 <body>
@@ -35,7 +39,7 @@
                 <section class="create-playlist margin-left">
                     <h3 class="margin-y">PLAYLIST</h3>
                     <ul class="line-height">
-                        <li class="flex"><button class="square margin-left">&plus;</button><h5 class="margin-left create-playlist-title light">Crea Playlist</h5></li>
+                        <li class="flex light"><button class="square margin-left">&plus;</button><h5 class="margin-left create-playlist-title">Crea Playlist</h5></li>
                         <li class="light">Nome Playlist</li>
                         <li class="light">Nome Playlist</li>
                         <li class="light">Nome Playlist</li>
@@ -49,7 +53,7 @@
                 </div>
                 <hr class="separator">
                     <i class="fa-regular fa-user admin"></i>
-                    <span class="admin-name light">Jhon Doe</span>
+                    <span class="admin-name">Jhon Doe</span>
                 </div>
             </nav>
         </section>
@@ -127,7 +131,6 @@
   <div class="Created-for-you">
 
   </div>
-   <!-- /Created for you -->
     <div class="created-for-you">
   <div class="col-2">
         <div class="card">
@@ -142,6 +145,25 @@
             </div>
     </div>
 </div>
+ <!-- /Created for you -->
+  <!-- Popular Artist -->
+  <h2 class="for-you-title">Artisti più popolari</h2>
+  <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti</p>
+    <div class="created-for-you">
+  <div class="col-2">
+        <div class="card">
+        <img src="./img/youg.jpeg" alt="" class="round-image">
+            <h3 class="card-title">Young</h3>
+            </div>
+    </div>
+    <div class="col-2">
+        <div class="card">
+        <img src="./img/einaudi.jpeg" alt="" class="round-image">
+            <h3 class="card-title">Einaudi</h3>
+            </div>
+    </div>
+</div>
+     <!-- /Popular Artist -->
 </div>
  </div>
         </section>
@@ -151,9 +173,27 @@
 
     <!-- Song-info section -->
     <section class="song-info h-90">
-        <div class="left"></div>
+        <!-- left section song info -->
+        <div class="left">
+            <img src="./img/sinister.jpeg" alt="" class="small-sinister">
+            <div class="song-name">
+                <h4>Sinister</h4>
+                <span>Brano nome</span>
+            </div>
+            <div class="icones-left">
+                <i class="fa-regular fa-heart margin-10"></i>
+                <i class="fa-regular fa-folder margin-10"></i>
+            </div>
+        </div>
+          <!-- /left section song info -->
+
+             <!-- center section song info -->
         <div class="center"></div>
+         <!-- /center section song info -->
+
+           <!-- right section song info -->
         <div class="right"></div>
+          <!-- /right section song info -->
     </section>
     <!-- /Song-info section -->
 </body>
