feat:footer center modified

--- a/index.html
+++ b/index.html
@@ -181,14 +181,31 @@
                 <span>Brano nome</span>
             </div>
             <div class="icones-left">
-                <i class="fa-regular fa-heart margin-10"></i>
-                <i class="fa-regular fa-folder margin-10"></i>
+                <i class="fa-regular fa-heart margin-10 light"></i>
+                <i class="fa-regular fa-folder margin-10 light"></i>
             </div>
         </div>
           <!-- /left section song info -->
 
              <!-- center section song info -->
-        <div class="center"></div>
+        <div class="center">
+            <div class="icones-center">
+                <i class="fa-solid fa-shuffle margin-10 hover-bigger"></i>
+            <i class="fa-solid fa-backward-step margin-10 hover-bigger"></i>
+            <i class="fa-regular fa-circle-play margin-10 hover-bigger"></i>
+            <i class="fa-solid fa-forward-step margin-10 hover-bigger"></i>
+            <i class="fa-solid fa-rotate-right margin-10 hover-bigger"></i>
+            <!-- line section -->
+            <div class="line-section">
+                <span class="time-line start-song">0:25</span>
+            <span class="line">
+            </span>
+            <span class="time-line end-song">4:35</span>
+        </div>
+          <!-- /line section -->
+        </div>
+        
+        </div>
          <!-- /center section song info -->
 
            <!-- right section song info -->
