feat: song line modified

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             <div class="line-section">
                 <span class="time-line start-song">0:25</span>
             <span class="line">
+                <div class="line-inside"><div class="line-circle"></div></div>
             </span>
             <span class="time-line end-song">4:35</span>
         </div>
@@ -209,7 +210,9 @@
          <!-- /center section song info -->
 
            <!-- right section song info -->
-        <div class="right"></div>
+        <div class="right">
+
+        </div>
           <!-- /right section song info -->
     </section>
     <!-- /Song-info section -->
