feat:right section footer modified

--- a/index.html
+++ b/index.html
@@ -211,7 +211,14 @@
 
            <!-- right section song info -->
         <div class="right">
-
+            <div class="icons-right">
+            <i class="fas fa-list-ul margin-10"></i> 
+            <i class="fas fa-desktop margin-10"></i> 
+            <i class="fas fa-volume-up margin-10"></i> 
+        </div>
+        <span class="line-right">
+            <div class="line-inside-right"><div class="line-circle"></div></div>
+        </span>
         </div>
           <!-- /right section song info -->
     </section>
