feat: sidebar modified

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                         <li class="light">Nome Playlist</li>
                         <li class="light">Nome Playlist</li>
                         <li class="light">Nome Playlist</li>
-                        <li class="light">Nome Playlist</li>
                     </ul>
                 </section>
                 <div class="nav-footer">
@@ -79,7 +78,8 @@
         <!-- Card -->
     <div class="col">
         <div class="card">
-<img src="./img/metal_lifting.jpg" alt="">
+<img src="./img/metal_lifting.jpg" alt="" class="card-image">
+<i class="fa-regular fa-circle-play play-hover"></i>
 <h3 class="card-title">Heavy metal</h3><br>
 <span class="card-subtitle">subtitle</span>
 </div>
@@ -89,6 +89,7 @@
     <div class="col">
         <div class="card">
         <img src="./img/stranger.jpeg" alt="">
+        <i class="fa-regular fa-circle-play play-hover"></i>
             <h3 class="card-title">Stranger things, Vol. 1 (A Netflix Original Series Soundtrack)</h3><br>
             <span class="card-subtitle">Kyle Dixon & Michael Stein</span>
             </div>
@@ -96,6 +97,7 @@
     <div class="col">
         <div class="card">
         <img src="./img/aquietplace.jpeg" alt="">
+        <i class="fa-regular fa-circle-play play-hover"></i>
             <h3 class="card-title">A quiet place</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
@@ -103,6 +105,7 @@
     <div class="col">
         <div class="card">
         <img src="./img/split.jpeg" alt="">
+        <i class="fa-regular fa-circle-play play-hover"></i>
             <h3 class="card-title">Split</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
@@ -110,6 +113,7 @@
     <div class="col">
         <div class="card">
         <img src="./img/cure.jpeg" alt="">
+        <i class="fa-regular fa-circle-play play-hover"></i>
             <h3 class="card-title">A cure for wellness</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
@@ -117,6 +121,7 @@
     <div class="col">
         <div class="card">
         <img src="./img/sinister.jpeg" alt="">
+        <i class="fa-regular fa-circle-play play-hover"></i>
             <h3 class="card-title">Sinister</h3><br>
             <span class="card-subtitle">subtitle</span>
             </div>
@@ -167,9 +172,9 @@
 </div>
  </div>
         </section>
-        <!-- /Main section -->
     </div>
-    </section>
+        <!-- /Main section -->
+   
 
     <!-- Song-info section -->
     <section class="song-info h-90">
