--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <section class="side-bar">
             <nav >
                 <img src="./img/logo.svg" alt="Logo spotify" class="logo-spotify margin-left">
-                <section class="menu">
+                <div class="menu">
                     <ul class="margin-left">
                         <li class="light"><i class="fa-solid fa-house"></i><a href="">Home</a> </li>
                         <li class="light"><i class="fa-solid fa-magnifying-glass"></i> <a href="">Cerca</a></li>
                         <li class="light"><i class="fa-solid fa-lines-leaning"></i><a href="">La tua libreria</a></li>
                     </ul>
-                </section>
-                <section class="create-playlist margin-left">
+                </div>
+                <div class="create-playlist margin-left">
                     <h3 class="margin-y">PLAYLIST</h3>
                     <ul class="line-height">
                         <li class="flex light"><button class="square margin-left">&plus;</button><h5 class="margin-left create-playlist-title">Crea Playlist</h5></li>
@@ -44,7 +44,7 @@
                         <li class="light">Nome Playlist</li>
                         <li class="light">Nome Playlist</li>
                     </ul>
-                </section>
+                </div>
                 <div class="nav-footer">
                     <div class="install">
                     <span class="downarrow">&DownArrow;</span>
