feat:responsive modified

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <section class="side-bar">
             <nav >
                 <img src="./img/logo.svg" alt="Logo spotify" class="logo-spotify margin-left">
+                <img src="./img/logo-small.svg" alt="Logo small" class="logo-small">
                 <div class="menu">
                     <ul class="margin-left">
                         <li class="light"><i class="fa-solid fa-house"></i><a href="">Home</a> </li>
@@ -48,7 +49,7 @@
                 <div class="nav-footer">
                     <div class="install">
                     <span class="downarrow">&DownArrow;</span>
-                    <span class="light">Installa app</span>
+                    <span class="light install-now">Installa app</span>
                 </div>
                 <hr class="separator">
                     <i class="fa-regular fa-user admin"></i>
